--- a/app/src/main/res/layout/fragment_actual_states.xml
+++ b/app/src/main/res/layout/fragment_actual_states.xml
@@ -5,12 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ActualStatesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCurrent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:textSize="36dp"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
