--- a/app/src/main/res/layout/fragment_covid.xml
+++ b/app/src/main/res/layout/fragment_covid.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewTeste"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
