--- a/app/src/main/res/layout/fragment_history_states.xml
+++ b/app/src/main/res/layout/fragment_history_states.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryStatesFragment">
+    tools:context=".historyStates.HistoryStatesFragment">
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic__0325" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewStatesHistory"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
