--- a/app/src/main/res/layout/linha_recycler_view.xml
+++ b/app/src/main/res/layout/linha_recycler_view.xml
@@ -3,12 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="8dp">
+    android:layout_margin="4dp"
+    android:background="#f2f2f2"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+
+        >
 
         <TextView
             android:id="@+id/textView11"
