--- a/app/src/main/res/layout/linha_recycler_view_states.xml
+++ b/app/src/main/res/layout/linha_recycler_view_states.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="4dp"
+    android:background="#f2f2f2"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
